fix: jvm native access warning on build on debug run